--- a/styles.css
+++ b/styles.css
@@ -3,4 +3,33 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  background-color: rgba(0, 0, 0, 0.836);
+  color: rgba(245, 245, 220, 0.884);
+  font-family: "Electrolize", "Josefin Sans", sans-serif;
+  text-shadow: 1px 2px rgba(0, 0, 0, 0.856);
+  text-align: center;
+  font-size: 62.5%;
+}
+h1 {
+  margin-top: 27px;
+  font-size: 2.6rem;
+}
 
+.for {
+  width: 599px;
+  padding: 27px;
+  margin: 0 auto;
+  margin-top: 223px;
+  border: 0px solid yellowgreen;
+  border-radius: 9px;
+  box-shadow: 1px 1px 7px 3px rgba(24, 201, 24, 0.61);
+}
+h2 {
+  font-size: 2.1rem;
+}
+p {
+  margin-top: 17px;
+  font-family: monospace;
+  font-size: 1.3rem;
+}
